# measuresuite

./: .gitignore  Makefile.am  Readme.md  autogen.sh  configure.ac  index.ts  measure.interface.ts  package-lock.json  package.json  static-link-assemblyline.patch  tsconfig.json
src/: Makefile.am  checker.c  checker.h  evaluator.c  measure_helper.c  measure_helper.h  measuresuite.c  measuresuite.h  ms_error_description.c  printer.c  printer.h  randomizer.c  timer.c
src-ts/: Makefile.am  binding.gyp  measuresuite_binding.c
test/: Makefile.am  all_fiat.c  functions.test.ts  functions_sq.test.ts  no_checkfunctions_so.c  test.ts  test_add_two_numbers.c  test_array_width_five_add_pair.c  test_array_width_three.c  test_array_width_three_add_pair.c  test_array_width_three_mul.c  test_batchsize.c  test_checker.c  test_chunking.c  test_curve25519_mul.c  test_curve25519_sq.c  test_evaluator.c  test_helper.c  test_helper.h  test_invalid_instruction.c  test_lib.c  test_p224_mul.c  test_p224_sq.c  test_p256_mul.c  test_p256_sq.c  test_p384_mul.c  test_p384_sq.c  test_p434_mul.c  test_p434_sq.c  test_p521_mul.c  test_p521_sq.c  test_plus1.c  test_poly1305_mul.c  test_poly1305_sq.c  test_six_param.c  test_wrongResult.c
